Background Issue & Grid Overflow Issue
Replaced bg.jpg with css gradient for faster loading & fixed some issues with items not overflowing properly.

--- a/jiraview/src/index.css
+++ b/jiraview/src/index.css
@@ -1,9 +1,11 @@
 body {
-    background-image: url("/bg.jpg") !important;
-    background-repeat: no-repeat;
-  background-position: center center;
- -webkit-background-size: cover;
- -moz-background-size: cover;
- -o-background-size: cover;
-  background-size: cover !important;
+    background-color: #c5b99e !important;
+    background-image: radial-gradient(circle farthest-corner at top left, rgba(225, 243, 255,1) 0%, rgba(225, 243, 255,0) 50%),
+    radial-gradient(circle farthest-side at top right, rgba(181, 176, 177,1) 0%, rgba(181, 176, 177,0) 10%),
+    radial-gradient(circle farthest-corner at bottom right, rgba(204, 204, 204,1) 0%, rgba(204, 204, 204, 0) 33%),
+    radial-gradient(circle farthest-corner at top right, rgba(155, 221, 240,1) 0%, rgba(155, 221, 240,0) 50%) ,
+    radial-gradient(ellipse at bottom center, rgba(255, 255, 255,1) 0%, rgba(255, 255, 255, 0) 80%) !important;
+    background-repeat: no-repeat !important;
+
+
 }   
